--- a/index.html
+++ b/index.html
@@ -6,31 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taty Castellanos: Sueño con conocer a Messi y jugar con él en la selección</title>
 </head>
+<header>
+    <img src="/assets/logo.png" alt="">
+    <nav>
+        <ul>
+            <li><a href="https://www.lacapital.com.ar/">Inicio</a></li>
+            <li>Noticia</li>
+            <li>Contacto</li>
+        </ul>
+    </nav>
+</header>        
 <body>
-    <div>
-        <h1>Taty Castellanos: "Sueño con conocer a Messi y jugar con él en la selección"</h1>
-        <p>
-            El delantero mendocino le marcó cuatro goles a Real Madrid en la victoria de Girona por 4 a 2. "Es el Dios del fútbol", agregó sobre la Pulga
-        </p>
-    </div>
-    <div>
-        <img src="/assets/taty.png" alt="" srcset="">
-    </div>
-    <div>
-        <p>
-            El delantero argentino Valentín "Taty" Castellano, quien le marcó cuatro goles a Real Madrid con Girona en LaLiga española, reveló este miércoles que su sueño es "poder conocer a Lionel Messi y coincidir con él en el seleccionado".
-        </p>
-        <p>
-            Luego de su histórica actuación con un póker de goles ante Real Madrid, el mendocino contó de su fanatismo por el capitán del seleccionado argentino con el que "nunca" pudo coincidir.
-        </p>
-    </div>
-    <div>
-        <p>
-            "Sueño con conocerlo. Es el Dios del fútbol. Me hizo llorar en el Mundial. Soy un apasionado de Messi", contó Castellanos en una entrevista con el periodista español Gerard Romero en Twitch.
-        </p>
-        <p>
-            El delantero mendocino, de 24 años, que hace unos años estuvo cerca de jugar en River, fue parte del seleccionado argentino sub-23 en 2020 y aseguró que su otro anhelo es ser convocado para el equipo que conduce Lionel Scaloni.
-        </p>
-    </div>
+    <main>
+        <section id="section-1">
+            <h1>Taty Castellanos: "Sueño con conocer a Messi y jugar con él en la selección"</h1>
+            <p>
+                El delantero mendocino le marcó cuatro goles a Real Madrid en la victoria de Girona por 4 a 2. "Es el Dios del fútbol", agregó sobre la Pulga
+            </p>
+        </section>
+        <section id="section-2">
+            <img src="/assets/taty.png" alt="" srcset="">
+            <p>
+                El delantero argentino Valentín "Taty" Castellano, quien le marcó cuatro goles a Real Madrid con Girona en LaLiga española, reveló este miércoles que su sueño es "poder conocer a Lionel Messi y coincidir con él en el seleccionado".
+            </p>
+            <p>
+                Luego de su histórica actuación con un póker de goles ante Real Madrid, el mendocino contó de su fanatismo por el capitán del seleccionado argentino con el que "nunca" pudo coincidir.
+            </p>
+            <p>
+                "Sueño con conocerlo. Es el Dios del fútbol. Me hizo llorar en el Mundial. Soy un apasionado de Messi", contó Castellanos en una entrevista con el periodista español Gerard Romero en Twitch.
+            </p>
+            <p>
+                El delantero mendocino, de 24 años, que hace unos años estuvo cerca de jugar en River, fue parte del seleccionado argentino sub-23 en 2020 y aseguró que su otro anhelo es ser convocado para el equipo que conduce Lionel Scaloni.
+            </p>
+        </section>
+    </main>
 </body>
+<footer>
+    <a href="https://github.com/franbruno6/UAI-DYAW-TP2">Github</a>
+</footer>
 </html>
